# LFAM-Virtual-Pressure-Optimizer

./: PATTERN 1 (~recovered)2_optimized.gcode  README.md  add_grid.py  debug_durations.py  debug_render.py  debug_viewer.py  fix_canvas.py  fix_import.py  fix_indent.py  fix_layout.py  fix_slots.py  fix_viewer.py  fix_viewer2.py  fix_window.py  generate_classes.py  main.py  make_gcode.py  paintevent_error.txt  patch_2d_canvas.py  patch_3d.py  patch_3d_canvas.py  patch_controls.py  patch_controls_remove_btns.py  patch_emitter.py  patch_emitter_relative.py  patch_layer_viewer.py  patch_layer_viewer_3d.py  patch_main_window.py  patch_move.py  patch_paintevents.py  patch_physics.py  patch_sidebar.py  patch_simulation.py  patch_slots.py  patch_start_sim.py  patch_viewer.py  patch_viewer2.py  patch_viewer3.py  patch_window.py  pyproject.toml  (+39 more)
scratch/: test_slicer.py
src/engine/analysis/: geometry_analyzer.py  path_detector.py
src/engine/emitter/: gcode_emitter.py
src/engine/optimizer/: move_splitter.py  pressure_optimizer.py
src/engine/parser/: move.py  parser.py
src/engine/pressure/: __init__.py  pressure_model.py
src/profiles/: profile_manager.py
src/profiles/machines/: addon_mac_x1.json  generic_lfam.json  large_pellet_printer.json
src/profiles/materials/: abs.json  nylon_gf.json  petg.json
src/slicer/: engine.py  gcode_generator.py  infill.py  intersection.py  mesh_generator.py  mesh_prep.py  optimize.py  perimeter.py  stitcher.py  types.py
src/ui/: main_window.py  theme.py
tests/fixtures/: complex_part.gcode  curved_vase.gcode  simple_cube.gcode
(+13 files in other folders)
