[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lfam-optimizer"
version = "1.0.0"
description = "Intelligent G-code optimization engine for Large Format Additive Manufacturing (LFAM) pellet extrusion systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "LFAM Optimizer Team"}
]

dependencies = [
    "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[project.scripts]
lfam-optimizer = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
